<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/stamp"
        android:enabled="true"
        android:icon="@drawable/menu_selector_stamp"
        android:title="@string/menu_stamp"
        app:showAsAction="always" />

    <item
        android:id="@+id/customer"
        android:enabled="true"
        android:icon="@drawable/menu_selector_customer"
        android:title="@string/customer"
        app:showAsAction="always" />

<!--    <item-->
<!--        android:id="@+id/sms"-->
<!--        android:enabled="true"-->
<!--        android:title="@string/sms"-->
<!--        app:showAsAction="always" />-->

    <item
        android:id="@+id/coupon"
        android:enabled="true"
        android:icon="@drawable/menu_selector_coupon"
        android:title="@string/coupon"
        app:showAsAction="always" />
</menu>