<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.fragment.CouponFragment">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/text_color"
        android:textSize="16dp"
        android:text="@string/coupon_registration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/couponContentEditText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="35dp"
        android:padding="16dp"
        android:gravity="top|left"
        android:background="@drawable/bg_edit"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/registeredCouponList"
        app:layout_constraintBottom_toTopOf="@id/createCouponButton"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createCouponButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/create_coupon"
        android:textSize="14dp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:background="@drawable/button_yellow"
        app:layout_constraintTop_toBottomOf="@id/couponContentEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/couponContentEditText"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/registeredCouponTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registered_coupon"
        android:textColor="@color/text_color"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="@id/registeredCouponList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registeredCouponList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/registeredCouponList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/bg_edit"
        tools:listitem="@layout/coupon_list_item_layout"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/registeredCouponTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/couponContentEditText"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>