<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fadingEdge="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="0dp"
                android:layout_height="321dp"
                android:background="#FFFFDD1A"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <include
                android:id="@+id/headerLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                layout="@layout/header_layout"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/white"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@id/headerLayout"
                app:layout_constraintBottom_toTopOf="@id/copyrightTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="20dp"
                        android:textStyle="bold"
                        android:text="@string/sign_in"
                        android:textColor="#222222"
                        android:textSize="24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/storeIdTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/store_id"
                        android:textColor="#222222"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/titleTextView"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/idEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center_vertical"
                        android:textColorHint="#FFBBC0C5"
                        android:textColor="#222222"
                        android:hint="@string/enter_id"
                        android:textSize="14dp"
                        android:background="@drawable/bg_edit"
                        app:layout_constraintTop_toBottomOf="@id/storeIdTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/passwrodTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="20dp"
                        android:text="@string/password"
                        android:textColor="#222222"
                        android:textSize="16dp"
                        app:layout_constraintTop_toBottomOf="@id/idEditText"
                        app:layout_constraintStart_toStartOf="parent" />

                    <EditText
                        android:id="@+id/pwEditText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center_vertical"
                        android:textColorHint="#FFBBC0C5"
                        android:textColor="#222222"
                        android:textSize="14dp"
                        android:inputType="textPassword"
                        android:hint="@string/enter_pw"
                        android:background="@drawable/bg_edit"
                        app:layout_constraintTop_toBottomOf="@id/passwrodTextView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/signInButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginBottom="30dp"
                        android:textStyle="bold"
                        android:text="@string/sign_in"
                        android:textColor="#222222"
                        android:textSize="14dp"
                        android:background="@drawable/button_yellow"
                        app:layout_constraintTop_toBottomOf="@id/pwEditText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/copyrightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:textColor="#FFAEAEAE"
                android:textSize="12dp"
                android:text="@string/copyright"
                app:layout_constraintTop_toBottomOf="@id/cardView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>