<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.StampFragment">

    <TextView
        android:id="@+id/stampApplyTitleTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginStart="20dp"
        android:textSize="16dp"
        android:textColor="@color/text_color"
        android:text="@string/stamp_registration"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/stampApplyTitleTextview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboardLayout" >

        <TextView
            android:id="@+id/stampCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="@color/text_color"
            android:textSize="26dp"
            android:text="1"
            android:textStyle="bold"
            android:maxLength="4"
            android:inputType="numberDecimal"
            android:background="@drawable/ic_rectangle_skyblue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/minusButton"
            app:layout_constraintEnd_toStartOf="@id/plusButton"/>

        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/ic_plus"
            android:background="@drawable/ic_gray_border_rectangle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/stampCountTextView"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/minusButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_minus"
            android:background="@drawable/ic_gray_border_rectangle"
            app:layout_constraintEnd_toStartOf="@id/stampCountTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skipButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:background="@drawable/button_black"
            app:layout_constraintTop_toBottomOf="@id/minusButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/applyButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/applyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/apply"
            android:textColor="@color/text_color"
            android:background="@drawable/button_yellow"
            app:layout_constraintTop_toBottomOf="@id/minusButton"
            app:layout_constraintStart_toEndOf="@id/skipButton"
            app:layout_constraintEnd_toEndOf="@id/plusButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/keyboardLayout"
        android:layout_width="0dp"
        android:layout_height="286dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="35dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="@id/inputLayout"
        app:layout_constraintStart_toEndOf="@id/inputLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <io.laonda.storestamp.ui.widget.NumberKeyboardLayout
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>